[package]
name = "codecat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.70"
once_cell = "1.17.1"
url = "2.3.1"
tokio = "1.26.0"
aptos-sdk = { git = "https://github.com/jjwygjj/aptos-core", branch = "feat_sdk" }
hex = "0.4.3"
serde_json = "1.0.94"